# SkypixelV3

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  requirements.txt  scrts.py.example  test.py
.github/: FUNDING.yml
cogs/: __init__.py  alphatracker.py  apipolicytracker.py  auctionhouse.py  errorhandler.py  firesaletracker.py  guild.py  itemdb.py  jobtracker.py  logger.py  motdtracker.py  ranktracker.py  status.py  versiontracker.py  wikitracker.py  zonetracker.py
modules/: asyncreqs.py  colorcompare.py  colors.py  datamanager.py  hypixel.py  mojang.py  mongodb.py  parser.py  utils.py
