[project]
name = "skypixelv3"
version = "3.0.0-alpha.1"
description = "A base Disnake bot"
authors = ["RagingEnby <contact@ragingenby.dev>"]
requires-python = ">=3.11"
dependencies = [
    "disnake",
    "aiofiles==24.1.0",
    "aiohttp==3.9.3",
    "aiohttp==3.11.16",
    "disnake==2.9.1",
    "disnake==2.10.1",
    "mcstatus==11.1.1",
    "motor==3.3.2",
    "NBT==1.5.1",
    "Requests==2.32.3",
    "typing-extensions==4.13.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
