[project]
name = "skypixelv3"
version = "3.0.0-alpha.1"
description = "A base Disnake bot"
authors = [{name="RagingEnby", email="contact@ragingenby.dev"}]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "curl-cffi>=0.13.0",
    "disnake",
    "mcstatus>=11.1.1",
    "motor>=3.7.0",
    "nbt>=1.5.1",
    "requests>=2.32.3",
    "typing-extensions>=4.15.0",
]
